# admin-ops-ai

./: .gitignore  README.md  config.py  main.py  mcp_server.py  plan_before_production  pyproject.toml  scheduler.py  schemas.py  seed.py  template.xlsx
agent_system/: __init__.py  data_extractor.py  email_agent.py  memory_manager.py  orchestrator.py  provider.py
ai/orchestrator/: agent.py
api/: main.py
api/middleware/: middleware.py
api/routes/: __init__.py  actions.py  admin.py  auth.py  chat.py  common.py  public.py  (+1 more)
config/: __init__.py  seed.py
data/: admin_ops.db-shm  admin_ops.db-wal  product_catalog.xlsx
frontend/: middleware.ts  next.config.ts  package-lock.json  providers.tsx  proxy.ts
my_agents/: cost_tracker.py  memory.py  utils.py
services/: advance_tools.py  database.py  email_tools.py  export_tools.py  oauth_tools.py  payslip_template.py  payslip_tools.py  production_tools.py  rejection_tools.py  report_tools.py
tests/: conftest.py  test_database.py  test_export_payslip.py  test_production_tools.py  test_rejection_advance.py  test_report_tools.py
tools/: advance_tools.py  batch_daily_update.py  bus.py  cache.py  calc_tools.py  database.py  email_tools.py  excel_tools.py  export_tools.py  generate_payslip.py  get_daily_status.py  get_summary.py  list_catalog.py  log_production.py  log_rejection.py  mark_absent.py  oauth_tools.py  parse_table.py  payslip_template.py  payslip_tools.py  production_tools.py  record_advance.py  rejection_tools.py  report_tools.py  seed_dummy_data.py  send_report.py  update_entry.py
web_ui/: routes.py
(+93 files in other folders)
