[project]
name = "admin-ops-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "cryptography>=48.0.1",
    "fastapi>=0.136.3",
    "fastmcp>=3.4.2",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai-agents>=0.17.4",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "reportlab>=4.5.1",
    "uvicorn>=0.49.0",
]
