[project]
name = "admin-ops-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=48.0.1",
    "fastapi>=0.136.3",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai-agents>=0.17.4",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "reportlab>=4.5.1",
    "specifyplus>=0.0.20.post1",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
